minor alignment issue with roadside assistance button fix

--- a/scss/_customStyle.scss
+++ b/scss/_customStyle.scss
@@ -502,6 +502,6 @@ body {
 
 @media only screen and (min-width: 992px) {
   .wss-region-topbar-container #wss-roadside-assistance-button {
-    padding: 1rem;
+    padding: 15px;
   }
 }
